# eidolon

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.json  setup.cfg  tox.ini
.githooks/: pre-commit
docs/: ROADMAP.md  SETUP_CHECKLIST.md  osint_agent_models_and_fixtures.md
eidolon/: config.py  main.py  utils.py
eidolon/agent/: graph.py  nodes.py  prompts.py  report.py
eidolon/core/: jobs.py  logging.py  models.py  repository.py  runner.py  tool.py
eidolon/data/: ai_policies.json  attack_map.json  bazzell_brokers.json  broker_domains.txt  platform_packages.json  privacy_urls.json
eidolon/mcp/: __init__.py  __main__.py  server.py
eidolon/tools/: ai_audit.py  apify.py  base.py  blackbird.py  broker_scan.py  commoncrawl.py  courtlistener.py  dehashed.py  fastpeoplesearch.py  ghunt.py  hibp.py  holehe.py  libphonenumber.py  maigret.py  mitre.py  numverify.py  opencorporates.py  paste.py  phone.py  privacy_url_lookup.py  public_records.py  sherlock.py  shodan.py  spiderfoot.py  stealer.py  truepeoplesearch.py  whoxy.py
tests/: test_analysis_postprocess.py  test_availability.py  test_commoncrawl.py  test_dossier.py  test_mcp.py  test_mitre.py  test_ollama_optional.py  test_pipeline.py  test_report_status.py  test_routing.py  test_runner.py  test_tools.py
tests/fixtures/: ai_audit_response.json  analysis_response.json  apify_response.json  blackbird_response.json  broker_apify_response.json  broker_google_response.json  commoncrawl_response.json  courtlistener_response.json  dehashed_response.json  error_response.json  ghunt_response.json  hibp_no_results.json  hibp_response.json  holehe_response.json  libphonenumber_response.json  maigret_response.json  mitre_response.json  numverify_response.json  opencorporates_response.json  paste_response.json  phone_response.json  public_records_response.json  sherlock_response.json  shodan_response.json  spiderfoot_response.json  stealer_response.json  truepeoplesearch_response.json  whoxy_response.json
