[project]
name = "eidolon-osint"
version = "0.1.0"
description = "Local, privacy-first, MCP-native OSINT exposure scanner."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "apify-client>=3.0.2",
    "holehe>=1.61",
    "ghunt==2.3.3",
    "maigret>=0.6.1",
    "aiohttp>=3.14.0",
    "chardet>=7.4.3",
    "reportlab>=4.5.1",
    "phonenumbers>=8.13.0",
    "pillow>=10.4.0",
    "shodan>=1.31.0",
    "playwright>=1.44.0",
    "structlog>=24.1.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
]

[project.scripts]
eidolon = "eidolon.main:main"
eidolon-mcp = "eidolon.mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eidolon"]

# Ship the report's soft branding assets (logo + bundled Nunito fonts) inside the
# wheel so the PDF styling survives a packaged install. report.py also resolves
# these from the repo root for source runs.
[tool.hatch.build.targets.wheel.force-include]
"assets" = "eidolon/assets"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | output
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", ".git", "__pycache__", "output"]

[tool.mypy]
python_version = "3.11"
strict_optional = false
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unreachable = false
warn_unused_ignores = false
warn_redundant_casts = true
warn_return_any = false
exclude = ["output/", "\\.venv/", "tests/"]
